--- a/q/275739.html
+++ b/q/275739.html
@@ -26,15 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
-<tr d-ix="1"><td>163</td><td>Fortran GFortran</td><td>240924T094254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275746#275746">roblogic</a></td></tr>
-<tr d-ix="2"><td>028</td><td>05AB1E</td><td>240924T093200Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275745#275745">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
-<tr d-ix="4"><td>069</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
+<tr d-ix="0"><td>069</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
+<tr d-ix="1"><td>180</td><td>Fortran GFortran</td><td>240924T094254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275746#275746">roblogic</a></td></tr>
+<tr d-ix="2"><td>027</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
+<tr d-ix="3"><td>028</td><td>05AB1E</td><td>240924T093200Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275745#275745">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
 <tr d-ix="5"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 <tr d-ix="6"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>print(&quot;def f(n):f&quot;,*range(2**33),sep=&quot;==n==print('eovdedn'[n&amp;1::2]);&quot;)
+</code></pre>
+<p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
+<p>If it's OK for the function to error out after printing, 1 byte can be saved by writing <code>&lt;print(...)</code> in place of <code>==print(...)</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, 180 bytes</h1>
+<pre class="lang-fortran prettyprint-override"><code>integer*8n;character*8t
+print*,'integer*8i';print*,'read*,i';do n=0,4294967295
+k=mod(n,2);if(k==0)t='&quot;even&quot;';if(k==1)t='&quot;odd&quot;'
+print*,'if(i==',n,')print*,',t;enddo
+print*,'end'
+end
+</code></pre>
+<p><a href="https://tio.run/##RY/bCsMgEETf8xUlL5sEhTSklyB@jOhqJO1arPTza@0l6cuwc2ZhGBtiioq4s98jZ08JHcbuTELPKiqd3iZVt1iSjsGWexAri6hMxwowYUeyZ@MwjdPxNEyHapHXYBpiQyu8bRYp@zZJqPGBVMMP7T8oGFPDv8Y2XkpgxKBdGUsCyZiwPRUHVZGcn9pelLtnbinwssMh1zPq5QU" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">Try it online!</a></p>
+<p>Outputs a valid Fortran program. <a href="https://tio.run/##ldGxCsIwFEbh3acInbRU8N4bbR36MIWkJUsqofj6seDgUoST6Q5/zvLNa9nKlK/L/D1qdSlvcYmlHdLJlTiFttuPNJ/TOLqDd3OXV9n/tF0T3zE3zv1by2@9hrCP/64VtQ21PWrfUfuB2j1qD6j9JG1BloIsBVkKshRkKchSkKUgS0GWgiwVWSqyVGSpyFKRpSJLRZaKLBVZKrI0ZGnI0pClIUtDloYsDVkasjRkacjSI0uPLP2RZcyhVuk/" rel="nofollow noreferrer">Example</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 27 bytes</h1>
 <pre><code>´≡´ＳＦＸχχ⁺ι⪫´¦´¦⎇﹪ι²odd¦even
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjfTA4oy80o0lB51Lny_Z7OSpjVXWn6RgkZAfnlqkYahgY6CkaamAkRNQE5psUamjoJXfmaehtKhZYeWKekohKQW5SUWVWr45qeU5uSDpI00dRSU8lNSgJJKqWWpeUqaQGC9pDgpuRhq6fJoJd2yHKXYhQYQPgA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code and only goes up to 100 (the default interpreter can't actually handle very big switch statements anyway). Explanation:</p>
@@ -58,18 +76,7 @@
 </code></pre>
 <p>Each segment is simply a pair of strings; the <code>¦</code>s delimit the strings. (Using Charcoal integer constants would have made the generating program too long.) The first string of each segment is simply the case value for each case in turn while the second is its literal value and if that case is taken then it implicitly prints.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, 163 bytes</h1>
-<pre class="lang-fortran prettyprint-override"><code>integer*8n;character*8t
-print*,'integer*8x';do n=0,4294967295
-k=mod(n,2);if(k==0)t='&quot;even&quot;';if(k==1)t='&quot;odd&quot;'
-print*,'if(x==',n,')print*,',t;enddo
-print*,'end'
-end
-</code></pre>
-<p><a href="https://tio.run/##RY7bCoMwEETf/Yriy6okYMXWStiPCbkptpuShuLXN01v9mXYObMMY32IQRJ39nOkNFM0zoTmREJNMkgVXyYW15CThsGWryC03xG2rO/GfjwO3XgoFrx4XRHrajHbakFs64hQmruhEr5o/0Ze6xL@rbZaEYERg/rHWBSGtPbbU3ZQZEnpoexZulviljzPs53hajJqeQI" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">Try it online!</a></p>
-<p>Outputs a valid Fortran program. <a href="https://tio.run/##ldGxCsIwEIfxvU8ROmlR8O5irUMfRkhasqQSiq8fCw4upfDddMOfb/lNS1nLK1/n6ffU6lJe4xxLN6QmjX3j0nRK4@h27ubO77LNu0sbPzG3zh2t5b9eQtjGh2tFbUNtj9p31O5R@4HaA2o/SVuQpSBLQZaCLAVZCrIUZCnIUpClIEtFloosFVkqslRkqchSkaUiS0WWiiwNWRqyNGRpyNKQpSFLQ5aGLA1ZGrL0yNIjS79nGXNoav0C" rel="nofollow noreferrer">Example</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 28 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 28 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žJ'&lt;×η&quot;Ìi“0“ë&quot;«J0„ƒÎ¿»#žJ∍.;
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/fyEzd5vD0c9uVDvdkPmqYYwDEh1crHVrtBWTNOzbpcN@h/Yd2KxuZPero1bP@/x8A" rel="nofollow noreferrer">Try it online with max <code>25</code> instead of <code>4294967295</code></a>.<br />
@@ -110,7 +117,7 @@ end
                    # (then output the top of the stack implicitly as result)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 163 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 163 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>c=echo
 $c case \$1 in
 o=`$c {1..4294967295..2}&quot;)$c odd;;
@@ -132,12 +139,6 @@ $c esac
 </code></pre>
 <p>Bash brace expansions (which is what {x..y..step} is) are applied to their surrounding string, so <code>a{b,c}</code> returns <code>ab ac</code>. we build an array of all odds and another of all evens, then we zip them by pasting one from each array, converting tabs to newlines, and repeating until both arrays are exhausted.</p>
 <p><a href="https://ato.pxeger.com/run?1=m70kKbE4Y8GCpaUlaboWNxcn26YmZ-RzqSQrJCcWpyrEqBgqZOZx5dsmAEWqDfX0TIwsTSzNzI0sTfX0jGqVNIHC-Skp1tZcSglcqRBVRkiqTOCqUstS8yDKChKLS1IVbDSAgkoq1fnRWrFAFXB-KoRfU5yaoqBerB9TElOipR-Tp5-uDnJUanFiMsSpUBfDXA4A" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>print(&quot;def f(n):f&quot;,*range(2**33),sep=&quot;==n==print('eovdedn'[n&amp;1::2]);&quot;)
-</code></pre>
-<p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 38 bytes (very inefficient)</h1>
 <pre><code>2^₃₂-₁⟦;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]zwᵐ²
