--- a/q/275739.html
+++ b/q/275739.html
@@ -41,8 +41,10 @@
 <pre><code>Ø%Ż,“£Ƙ®“⁴Ḍ»Ṿ€j⁾fị
 </code></pre>
 <p>A full program that prints the code of a full program. (Or a monadic Link that yields the code of a full program as a list of characters.)</p>
+<p>The output of a partial program when the input is not <span class="math-container">\$i\$</span> is empty.</p>
 <p><a href="https://tio.run/##ATEAzv9qZWxsef//w5glxbss4oCcwqPGmMKu4oCc4oG04biMwrvhub7igqxq4oG@ZuG7i///" rel="nofollow noreferrer" title="Jelly – Try It Online">Don't try it online!</a> (Memory requirements.)</p>
 <p><a href="https://tio.run/##ATAAz/9qZWxsef//MzLFuyzigJzCo8aYwq7igJzigbThuIzCu@G5vuKCrGrigb5m4buL//8" rel="nofollow noreferrer" title="Jelly – Try It Online">Here</a> is a version that uses <span class="math-container">\$2^5 - 1\$</span> as the upper bound instead (replacing <code>Ø%</code> <span class="math-container">\$=2^{32}\$</span> with <code>32</code> <span class="math-container">\$=32\$</span>).</p>
+<p>Here is a <a href="https://tio.run/##y0rNyan8/9/QUMfYKO3h7u5HDXPyU1KAZGpZat6jhrn/dQ63ZwFpK83I//@LEvPSUzWMjTQB" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a> for the partial code when <span class="math-container">\$i=11\$</span>, again with a reduced upper bound of <span class="math-container">\$32\$</span>.</p>
 <p>The generated code:</p>
 <ul>
 <li>header: empty string</li>
