--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240924T152414Z
+"   /golfscore                                      20240924T153152Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/236780.html">Binary triangle A141727                         : 0236780</a>
 <a href="q/275739.html">Print 4 billion if statements                   : 0275739</a>
 <a href="q/229683.html">Mr. Binary Counterman                           : 0229683</a>
 <a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
