--- a/q/236780.html
+++ b/q/236780.html
@@ -26,19 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>Wolfram Language Mathematica</td><td>211101T043414Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236783#236783">att</a></td></tr>
-<tr d-ix="1"><td>051</td><td>Pari/GP</td><td>211101T062532Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236785#236785">alephalp</a></td></tr>
-<tr d-ix="2"><td>052</td><td>Raku</td><td>211101T194539Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236804#236804">Sean</a></td></tr>
-<tr d-ix="3"><td>047</td><td>Ruby</td><td>211102T085107Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236807#236807">G B</a></td></tr>
-<tr d-ix="4"><td>076</td><td>Python 3</td><td>211101T081835Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236789#236789">loopy wa</a></td></tr>
-<tr d-ix="5"><td>022</td><td>Charcoal</td><td>211101T094001Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236791#236791">Neil</a></td></tr>
-<tr d-ix="6"><td>013</td><td>05AB1E</td><td>211101T110736Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236794#236794">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>067</td><td>Ruby</td><td>211101T104747Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236793#236793">AZTECCO</a></td></tr>
-<tr d-ix="8"><td>052</td><td>Python 2</td><td>211101T081048Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236788#236788">dingledo</a></td></tr>
-<tr d-ix="9"><td>066</td><td>JavaScript Node.js</td><td>211101T071226Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236786#236786">tsh</a></td></tr>
-<tr d-ix="10"><td>110</td><td>Python 3</td><td>211101T040105Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236782#236782">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>014</td><td>Japt</td><td>240924T155512Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/275754#275754">Shaggy</a></td></tr>
+<tr d-ix="1"><td>049</td><td>Wolfram Language Mathematica</td><td>211101T043414Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236783#236783">att</a></td></tr>
+<tr d-ix="2"><td>051</td><td>Pari/GP</td><td>211101T062532Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236785#236785">alephalp</a></td></tr>
+<tr d-ix="3"><td>052</td><td>Raku</td><td>211101T194539Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236804#236804">Sean</a></td></tr>
+<tr d-ix="4"><td>047</td><td>Ruby</td><td>211102T085107Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236807#236807">G B</a></td></tr>
+<tr d-ix="5"><td>076</td><td>Python 3</td><td>211101T081835Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236789#236789">loopy wa</a></td></tr>
+<tr d-ix="6"><td>022</td><td>Charcoal</td><td>211101T094001Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236791#236791">Neil</a></td></tr>
+<tr d-ix="7"><td>013</td><td>05AB1E</td><td>211101T110736Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236794#236794">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>067</td><td>Ruby</td><td>211101T104747Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236793#236793">AZTECCO</a></td></tr>
+<tr d-ix="9"><td>052</td><td>Python 2</td><td>211101T081048Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236788#236788">dingledo</a></td></tr>
+<tr d-ix="10"><td>066</td><td>JavaScript Node.js</td><td>211101T071226Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236786#236786">tsh</a></td></tr>
+<tr d-ix="11"><td>110</td><td>Python 3</td><td>211101T040105Z</td><td><a href="https://codegolf.stackexchange.com/questions/236780/binary-triangle-a141727/236782#236782">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>50</s> 49 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 14 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>Outputs the <code>n</code>-th row, 1-indexed.</p>
+<pre><code>È¤å^ ¬Í^XÑÑ}Î¤
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yKTlXiCszV5Y0dF9zqQ&amp;input=MTA" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>50</s> 49 bytes</h1>
 <pre><code>--Nest[i*=#&amp;/@{##,i=1,1}{1,##,1}&amp;@@#&amp;,{-1},#]/-2&amp;
 </code></pre>
 <p><a href="https://tio.run/##DcYxCoAwDADAxwQ6SIrGzaGQwVl0FociLWaogsap9O3Vmy55PULyKruv0VVrp/DoKo0D03IGQHGEVDLhfyqGGQxmSwVha21v6vJKUB6vdb7lVI4smAU7HMpWPw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -48,7 +55,7 @@
 where <span class="math-container">\$A_n(m)\$</span> is the <span class="math-container">\$m\$</span>th element of row <span class="math-container">\$n\$</span>.</p>
 <p>This can be rewritten <span class="math-container">\$\displaystyle A_{n+1}(m)=A_n(m)\oplus\bigoplus_{i\le m-2}^{}A_n(i)\$</span>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://pari.math.u-bordeaux.fr/" rel="nofollow noreferrer">Pari/GP</a>, 51 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://pari.math.u-bordeaux.fr/" rel="nofollow noreferrer">Pari/GP</a>, 51 bytes</h1>
 <pre><code>n-&gt;for(i=a=1,n,a=a*x+a/(1-x)%x^(2*i+1));Vecrev(a)%2
 </code></pre>
 <p><a href="https://tio.run/##FYsxCoAwDAC/EgQh0Ratq6TPcBSCWOkSSxHp72sd7oaDS5KjvVINwFWtD3fGyMLOqBGWoYwyobOF@rLjMsTREa3beeTzRaF@qf@gwDAbcI2Uoz4tdGB9U0AlovoB" rel="nofollow noreferrer" title="Pari/GP – Try It Online">Try it online!</a></p>
@@ -56,7 +63,7 @@ where <span class="math-container">\$A_n(m)\$</span> is the <span class="math-co
 <h3>Explanation</h3>
 <p>See each row as a polynomial, starting with the constant term. <code>a*x</code> prepends a 0 to the list. <code>a/(1-x)</code> takes the cumulative sum of the list. <code>%x^(2*i+1)</code> truncates the list to the first <code>2*i+1</code> elements.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://raku.org/" rel="nofollow noreferrer">Raku</a>, 52 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://raku.org/" rel="nofollow noreferrer">Raku</a>, 52 bytes</h1>
 <pre><code>1,{(1,{[+^] $^x,|(.[^3-1+$++]:v)}...*)[^(2+$_)]}...*
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH7r1ecWKmQll@koPHfUKdaA4ijteNiFVTiKnRqNPSi44x1DbVVtLVjrco0a/X09LQ0o@M0jLRV4jVjwdz/QL6hQex/AA" rel="nofollow noreferrer" title="Perl 6 – Try It Online">Try it online!</a></p>
@@ -68,13 +75,13 @@ where <span class="math-container">\$A_n(m)\$</span> is the <span class="math-co
 <li><code>+^</code> is the integer xor operator, and <code>[+^]</code> reduces the list of integers that contribute to the current element using that operator.</li>
 </ul>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 47 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 47 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>a=1;loop{puts&quot;%b&quot;%a;(a=2*z=2*a).times{a^=z/=2}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvz/P9HW0DonP7@guqC0pFhJNUlJNdFaI9HWSKsKiBM19Uoyc1OLqxPjbKv0bY1qa///BwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <strike>98</strike>, <strike>92</strike>, <strike>88</strike>, <strike>77</strike>, 76 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <strike>98</strike>, <strike>92</strike>, <strike>88</strike>, <strike>77</strike>, 76 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>v=-4**64;W=w=v*v;v+=w;O=1
 while[print(hex(O)[2::32])]:O*=w;O^=O//v&amp;W//v;W*=w
@@ -88,7 +95,7 @@ while[print(hex(O)[2::32])]:O*=w;O^=O//v&amp;W//v;W*=w
 <p>Runs &quot;forever&quot;, only it maxes out at around <strike>m=2^23. That's not a principal limitation, just me being cheap on integer constants.</strike> n=2^127 (rowindex) which I hope is close enough to eternity.
 <strong>UPDATE</strong> simplified the maths using @dingledooper's formula.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>23</s> 22 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>23</s> 22 bytes</h1>
 <pre><code>ＦＮ«Ｆ⊕⊗ιＩ∨¬ι﹪№ＫＭ1²Ｊ±ⅈ⊕ⅉ
 </code></pre>
 <p><a href="https://tio.run/##TY0xC8IwFITn9leETi9Qwbo61kWhsYODjmn61NK0rzwTF/G3x4c4uNzBfXecu1t2ZH1KV2IF@3mJwcSpQwat1SvPfrFjnHAO2MOOYufFBy2Floc5QG0fAY4MhoLEpWqoj56gpiiwRRwbIkYQUlSF6EameptnhzgtJwKDNxsQzvJYqv@rC3x775SqdVo9/Qc" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs the first <code>n</code> rows as a triangle. Explanation:</p>
@@ -105,7 +112,7 @@ while[print(hex(O)[2::32])]:O*=w;O^=O//v&amp;W//v;W*=w
 </code></pre>
 <p>Jump to the start of the next row of bits.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>16</s> <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>16</s> <s>14</s> 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>λb=Å»^}2β₁4*^
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//3O4k28Oth3bH1Rqd2/SoqdFEK@7///@6unn5ujmJVZUA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -128,7 +135,7 @@ while[print(hex(O)[2::32])]:O*=w;O^=O//v&amp;W//v;W*=w
          ^  #  And Bitwise-XOR it to the integer
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 67 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 67 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>f=-&gt;r,c{c&lt;0||c&gt;r*2?0:r&lt;1?1:([*c-2..c].sum{|x|f[r-1,x]}+f[r,c-1])%2}
 </code></pre>
@@ -138,7 +145,7 @@ while[print(hex(O)[2::32])]:O*=w;O^=O//v&amp;W//v;W*=w
 <li>Values outside the triangle give 0</li>
 </ul>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://docs.python.org/2/" rel="noreferrer">Python 2</a>, 52 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/2/" rel="noreferrer">Python 2</a>, 52 bytes</h1>
 <p>Outputs an infinite sequence of rows. As a bonus, it runs extremely slowly.</p>
 
 <pre class="lang-python prettyprint-override"><code>n=1
@@ -157,7 +164,7 @@ while 1:
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/r/P8/WkKs8IzMnVcHQikuhoCgzr0RdNV9dNc@6wjbPOk/L1syESwGioMIqL862wrpC39bi/38A" rel="noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=r=&gt;b=r?f(r-1).map(_=&gt;a[++i]=a[i-2]^b[i-3]^b[i],a=[i=1,0])&amp;&amp;a:[1]
 </code></pre>
@@ -182,7 +189,7 @@ n = m xor g xor h xor i
   = l xor f xor i
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 110 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 110 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>def f(n):
 &#9;if n&lt;1:return[1]
