--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240924T155512Z
+"   /golfscore                                      20240924T161119Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/230842.html">Days of the Week                                : 0230842</a>
 <a href="q/236780.html">Binary triangle A141727                         : 0236780</a>
 <a href="q/275739.html">Print 4 billion if statements                   : 0275739</a>
 <a href="q/229683.html">Mr. Binary Counterman                           : 0229683</a>
