--- a/q/275563.html
+++ b/q/275563.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>158</td><td>Rust</td><td>240917T104954Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275584#275584">bzr</a></td></tr>
+<tr d-ix="0"><td>157</td><td>Rust</td><td>240917T104954Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275584#275584">bzr</a></td></tr>
 <tr d-ix="1"><td>036</td><td>Charcoal</td><td>240918T005444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275601#275601">Neil</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
 <tr d-ix="3"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
@@ -37,10 +37,11 @@
 <tr d-ix="8"><td>008</td><td>05AB1E</td><td>240917T071811Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275578#275578">Kevin Cr</a></td></tr>
 <tr d-ix="9"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>167</s> <s>159</s> 158 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>let g=|n|{if n==2{return 1}for i in 2..n{if n%i==0{return 0}}1};let f=|p:i32|{for q in 2..{if g(q)&gt;0&amp;&amp;g(format!(&quot;{}{q}&quot;,p+q).parse().unwrap())&gt;0{return q}}0};
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>167</s> <s>159</s> <s>158</s> 157 bytes</h1>
+<p>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/52904">ceilingcat</a></p>
+<pre class="lang-rust prettyprint-override"><code>let g=|n|{if n==2{return 1}for i in 2..n{if n%i&lt;1{return 0}}1};let f=|p:i32|{for q in 2..{if g(q)&gt;0&amp;&amp;g(format!(&quot;{}{q}&quot;,p+q).parse().unwrap())&gt;0{return q}}0};
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=NY5BCsIwFESv8i1YEtSQ1o1Y4l2yaErAxiZNcJH8kwhSQVeeyNvYWruaxbw3zO3pQu-HtzLQSm0IhfgKXu0On_u59tCIZFLUCowQZXS1D85AgeriQIM2UDJmfvVaC8EXgCMWWE2-Eqk76n2Z4qTYvzIZDbH0xPO8IWPTSr8iWcRoMdt2G0tZJ11fE8qCuTrZETqyy7pF5FjNLx845zDM-QU" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=NY5BCsIwFESvEgVLghrauhFrvEsWTQnYb5ImuEj-SUSooCtP5G1srV3N4s0b5vZ0ofP9WwFppQbKSHwFr7b7z_1ce9KIBClqRUCIMrraBwekQHVxRBMNpOQcfnilj8XMc8QCq1FXIpmD3pUpjob9G6PQUMtOeZY1dCCt9Au6jBgtLjdmbRk30nU1ZTzA1UlD2dCd1y1ijtV08oFT9v2UXw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
 <pre><code>Ｎθ≔³ηＷ⊙⟦ηＩ⁺Ｉ⁺ηθＩη⟧⊙…¹÷κ²¬﹪κ⊕⊗μ≧⁺²ηＩη
