--- a/q/275241.html
+++ b/q/275241.html
@@ -26,17 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>128</td><td>Python 3</td><td>240903T161903Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275326#275326">Digital </a></td></tr>
-<tr d-ix="1"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
-<tr d-ix="2"><td>097</td><td>C gcc</td><td>240830T170906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275266#275266">Digital </a></td></tr>
-<tr d-ix="3"><td>078</td><td>F#</td><td>240831T120047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275278#275278">Juuz</a></td></tr>
-<tr d-ix="4"><td>053</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
-<tr d-ix="5"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
-<tr d-ix="6"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
-<tr d-ix="8"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Perl 5</td><td>240925T001521Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275765#275765">Kjetil S</a></td></tr>
+<tr d-ix="1"><td>128</td><td>Python 3</td><td>240903T161903Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275326#275326">Digital </a></td></tr>
+<tr d-ix="2"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
+<tr d-ix="3"><td>097</td><td>C gcc</td><td>240830T170906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275266#275266">Digital </a></td></tr>
+<tr d-ix="4"><td>078</td><td>F#</td><td>240831T120047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275278#275278">Juuz</a></td></tr>
+<tr d-ix="5"><td>053</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="6"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
+<tr d-ix="7"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
+<tr d-ix="9"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 49 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>sub f{($n=pop)&gt;&gt;7?($n%128+128,f($n%2**32&gt;&gt;7)):$n}
+</code></pre>
+<p><a href="https://tio.run/##dZHbboJAEIbvfYoJWQJLMdldwEWNh6TqbROvmrTG9ADWtgIVTDDGZ6e7iwJVO4GBme@fmT0kwfbbK4p09wrhwUTRIIkTPBzykfjXKfPvxGuHMmCW5TBBMO6h6FiE8RY2e0BZkGZgtkDYE4HaBkMwSE6IsbBLSK8hrSHjF5DPKsg8r@P9gZOJDSS/59I3ujDS5dSjDeFsJiWlb3akLnd9p@PyW8KmJ7wqatPLDfxbVE9qV6P8U5FPpOTaE78@DUqdru9cT5pK7zrGQulw66C@m72J1lGyy2xAQZ4Eb1nwjmEAY3U5/ZMGxqs4E9nwJMYVQAIs02y7jlaCf8brCDRbPpuXBNJE5LPQ1EiuE/YosmiJbdWsbFBy0PRUBKpzD/Q2pTI8r0ZmmC8zokzhrgw@glyx9DnSyq1Lay4n@Km3BCMw4i8DemBYljWdzx/mRqOqPIE6PpfVKU0u@vagfutY/AI" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p>Just a port of other answers.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
 <p>Attempt to get an existing library to do the heavy lifting:</p>
 
 <pre class="lang-python prettyprint-override"><code>from google.protobuf.internal.encoder import _VarintEncoder as v
@@ -47,13 +55,13 @@ def e(n):
 </code></pre>
 <p>Don't <strike><a href="https://tio.run/##PY5BasMwEEX3PsWsghRkYUl27BSyzBW6LVI8TgzJyEyVEJ/enUIp/M28x3z@spZbprBtE@cHXHO@3tEunEtOz8nOVJAp3i3SJY/IMD@WzAW@PiOLO//R@A2vasQJUJH@qCCd0lowMsdV6QpeSqtk8V2QRkM75ff74GunTSOSsTyZIG1TlnqYCZwPbWegMeAkvjfgu@4gxDfH3nUCvWv7dgiHVlwtd/0PBvlwLhyHIDNg@R2pUM3a3vCttN5@AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></strike> - TIO would need <code>google.protobuf</code> modules installed.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>98</s> <s>52</s> 50 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>98</s> <s>52</s> 50 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x:x&amp;-128and[128+x%128]+f(x%2**32&gt;&gt;7)or[x]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/r/P802JzE3KSVRocKqQk3X0MgiMS8lGkhpV6gCyVjtNI0KVSMtLWMjOztzzfyi6IrY/wVFmXklCmkaBppcMKYhEtPIHMExMjU1M0XiGliaG5oiKTYyNDE3sTA2M0HSo4skrwtXYIFkg6GhsaWFseZ/AA" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 97 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 97 bytes</h1>
 <ul>
 <li>Saved 2 bytes, thanks to @jdt</li>
 <li>Saved 16 bytes, thanks to @ceilingcat</li>
@@ -66,7 +74,7 @@ def e(n):
 <p><a href="https://tio.run/##hVJNb6MwEL3zK0apWtkNNDYBQkW6v2CvPaUVosYES8RE2FRRW/LTl518NJDuYeeAPI/3xm9mLLy1EP2N0qJqcwlLY3Ol7UP5y7nG6p9Qo/Qasf4ml4XSEgqiabrN5TZto4DoKXt292TPfj/PQs4o/Rr@Eb5cEhLNvTR9a1VllU5F9VFVRxGlswWlHncv0v69VjmUcpe3my0RtTYWWvQYpxbua2GlNS4Y9SExr6Re25LCpwMYSAKVHI9F3QBR8AQsAQXLMzGB6VR9sw@xxa5sQSZwy/zdxIVT@ZV6pcmFowogWOoO9mxX0LF6XOFFT0aazhm@14zOcQ42N5nSZOzbSmNFZqRZvaLrT@YOV3A8c38xIH4YRiGmPntc8JC7V4ZG4fNgEcTzKEAtThi8CxC7wDmfP8bzLnH@N7vDrOuCXBxSmP2DrRiO7Od0D1uLAlxTI00UYMGx4GrGoswauEdaW1nkkVNO747Cgfb9KE5EfAW2wcWeU3qu150aaqRtG409OF3/RxRVtja9t8kaUT7pzKp3idnbRvXe@Y3v4gjt4q4eyr8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p><a href="https://godbolt.org/z/vrdPG3x5K" rel="nofollow noreferrer">Compiler Explorer was helpful</a></p>
 </div>
-<div id="pu3" class="pu"><h1>F#, 78 bytes</h1>
+<div id="pu4" class="pu"><h1>F#, 78 bytes</h1>
 <pre class="lang-fs prettyprint-override"><code>let rec e v=
  let b=v&amp;&amp;&amp;127u
  if b=v then[byte b]else byte(b|||128u)::e(v&gt;&gt;&gt;7)
@@ -74,7 +82,7 @@ def e(n):
 <p><a href="https://tio.run/##VY3BCoMwDIbvPkUQJnoQbGttFSzsuBfYZeywSmWCdKNWYeC7u@phLJckX/L/@fsp717ObNtoPDjTgYGljWAn3S5JkhAq5giGfkfwT2Nv@uMN6LsZp9DCnOp1XQmVc9Y0Jl2UUiI73r3dYP314S7WQwtzAEZBqRARynHsLcSncxxF/9ICEcFEBWLKecXxpqgF4dhFSSlKyaoSm3Osyn8yiTMJYbVk2xc" rel="nofollow noreferrer">Try it online!</a></p>
 <p>A function taking a unsigned 32-bit int (treated as a signed int with the same bits) and returning a list of bytes.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 53 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 53 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(n){printf(&quot;%02X &quot;,n&amp;127|!!(n=n+0U&gt;&gt;7)&lt;&lt;7);n&amp;&amp;f(n);}
 </code></pre>
@@ -82,13 +90,13 @@ def e(n):
 <p>The literal <code>0U</code> is an unsigned integer constant. Adding it to <code>n</code> promotes <code>n</code> to an unsigned type.</p>
 <p>-6 bytes thanks to @Arnauld!</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
 <pre><code>₃E%₆yDκ≠₆×+Ṛ
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLigoNFJeKChnlEzrriiaDigobDlyvhuZoiLCIiLCIyNTU2NSIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Port of Charcoal, but there's a one byte built in for 128 so it beats 05ab1e lol</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žJ%žyвā≠žy*+R
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275249/52210"><em>@Neil</em>'s Charcoal answer</a>, so make sure to upvote that answer as well!</p>
@@ -108,7 +116,7 @@ def e(n):
               # (after which it is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu8" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 <p>Expects an integer and returns an array of bytes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&gt;&gt;7?[n&amp;127|128,...f(n&gt;&gt;&gt;7)]:[n]
@@ -129,7 +137,7 @@ n &gt;&gt; 7 ?      // if any bit at position 8 .. 32 of n is set:
   [ n ]       //   append n and stop the recursion
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 23 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∨Ｉ⮌Ｅ↨﹪ＮＸ²Ｉ32¹²⁸⁺ι∧κ¹²⁸0
 </code></pre>
 <p><a href="https://tio.run/##JYvBDsIgEAV/hXBaEkwELjWe1JMHbeMfYEtiI4VmgfbzV1pvk5n3@o/FPlpP1OEYMrQIN5syvNziMDl42BmudoM4FB/hHuaSn2V6OwQhWRfXClqy/cSN5kJUrXSzRV8SjJJdwgDfvxR75sc6OxMppcypMXRY/A8" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
