--- a/q/275689.html
+++ b/q/275689.html
@@ -50,7 +50,8 @@ char b[80];
 
 int f(char* a)
 {
-    for (c = i = 0; i &lt; 19682; i++) {
+    for (c = i = 0; i &lt; 19682; i++)
+    {
         for (memset(b, 32, p = 9), x = o = 0, j = i; j; j /= 3)
         {
             x += j % 3 &lt; 1;
