--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>241</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="0"><td>228</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="1"><td>2302</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
 <tr d-ix="2"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="3"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
@@ -37,40 +37,32 @@
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> <sub><s>280</s></sub> 241 bytes</h1>
-<pre class="lang-basic prettyprint-override"><code>dim m(20):d$=&quot;GIKN DFGK GIKN DFGK @BDG BDFI CGJN EILP&quot;
-for k=1to 8:for i=0to 4:for o=1to 4
-m(o+4*i)=555*2^(asc(mid$(field$(d$,k),o))/12+i-8):next:next
+<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> <sub><s>280</s></sub> <sub><s>241</s></sub> 228 bytes</h1>
+<pre class="lang-basic prettyprint-override"><code>dim m(20):d$=&quot;GIKNDFGKGIKNDFGK@BDGBDFICGJNEILP&quot;:for k=0to 7
+for i=0to 4:for o=1to 4:m(o+4*i)=555*2^(asc(mid$(d$,k*4+o))/12+i-8):next:next
 for i=1to 17:s(m(i)):next:for i=1to 16:s(m(17-i)):next:next
 sub s(x):sound x,.2,50:return
 </code></pre>
 <p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot. <br>
-Debug version (outdated):</p>
-<pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
-dim a(4),m(16)
-
-for k=0to 7                       :' do 8 times
-  for i=1to 4:read a(i):next      :' read next 4 notes into array a
-  t(a)                            :' call the arpeggio subroutine, t
+Ungolfed:</p>
+<pre class="lang-basic prettyprint-override"><code>dim m(20)
+d$=&quot;GIKNDFGKGIKNDFGK@BDGBDFICGJNEILP&quot;
+for k=0to 7                       :' the 8 chords
+  for i=0to 4                     :' ascend arpeggio for 5 octaves
+    for o=1to 4                   :' broken into 4 notes
+      m(o+4*i)=555*2^(asc(mid$(d$,k*4+o))/12+i-8)
+      :' ^      ^       ^-- get an ascii value from the middle of d$
+      :' |      |           and convert it to a frequency (Hz)
+      :' |      +-- base frequency A=440Hz, adjusted slightly
+      :' +-- populate m(1) to m(20), but only use 17 notes
+    next
+  next
+  for i=1to 17:s(m(i)):next       :' ascend
+  for i=1to 16:s(m(17-i)):next    :' descend
 next
-
-sub t(o)                          :' o is an octave (array of 4 notes, n)
-  for i=0to 3                     :' i goes up the octaves (steps of 12)
-  for j=1to 4                     :' j runs thru the notes in o
-    n=o(j)+12*i:print n;          :' n is the note number, incl factor
-    f=440*2^((n-21)/12)           :' f is frequency of n (Hz)
-    m(j+4*i)=f                    :' Add f to array m
-    s(f)                          :' Play f (Up)
-  next:next
-  for i=1to 15:s(m(16-i)):next    :' Play m (Down)
-  print
-return
-
-sub s(n)
-  sound n,.1,50
-return
+sub s(x):sound x,.2,50:return
 </code></pre>
-<p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
+<p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s></sub></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 230 bytes x 2</h1>
 <pre class="lang-bash prettyprint-override"><code>for z (GIKN DFGK GIKN DFGK @BDG BDFI CGJN EILP){W=
