--- a/q/275739.html
+++ b/q/275739.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
 <tr d-ix="1"><td>137</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
 <tr d-ix="2"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
 <tr d-ix="3"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
@@ -43,12 +43,11 @@
 <tr d-ix="14"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
 <tr d-ix="15"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 34 bytes</h1>
-<pre><code>$ |&quot;even&quot;|&quot;odd&quot;
-$
-$&quot;⨬(_)&quot;↘1♭↯ⁿ31 2
+<div id="pu0" class="pu"><h1>Uiua, 41 bytes</h1>
+<pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
+)ⁿ5 2&amp;p$ ⨬(&quot;even&quot;
 </code></pre>
-<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__JCB8ImV2ZW4ifCJvZGQiCiQgCiQi4qisKF8pIuKGmDHima3ihq_igb8xMCAyCgomcCZwICQiKF8gY2hhcnMpIuKKuOKnuwo=" rel="nofollow noreferrer">Uiua pad</a>. Uses <code>ⁿ10 2</code> (2^10) instead, because unfortunately we can't just make a string with billions of characters in it. This could be rewritten to print iteratively, which would make code which actually worked but would be a little longer.</p>
+<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__JnBAKeKNpSgKICAmcCQgfCJvZGQifCJldmVuIgop4oG_MTAgMiZwJCDiqKwoImV2ZW4iCg==" rel="nofollow noreferrer">Uiua pad</a>. Uses <code>ⁿ10 2</code> (2^10) instead so it won't take forever.</p>
 <p>Gives the source for a function of the form:</p>
 <pre><code>⨬(&quot;even&quot;|&quot;odd&quot;
 |&quot;even&quot;|&quot;odd&quot;
