--- a/q/275689.html
+++ b/q/275689.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>199</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
-<tr d-ix="1"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
-<tr d-ix="2"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
-<tr d-ix="3"><td>022</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
-<tr d-ix="4"><td>173</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
+<tr d-ix="0"><td>166</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
+<tr d-ix="1"><td>199</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
+<tr d-ix="2"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
+<tr d-ix="3"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
+<tr d-ix="4"><td>022</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
 <tr d-ix="5"><td>097</td><td>Perl 5 n</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
 <tr d-ix="6"><td>100</td><td>JavaScript Node.js</td><td>240923T081611Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275711#275711">tsh</a></td></tr>
 <tr d-ix="7"><td>114</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
@@ -39,7 +39,27 @@
 <tr d-ix="10"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
 <tr d-ix="11"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 199 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>177</s> <s>173</s> 166 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:f&quot;{(t:=bin((L:=[f'{t:&lt;9}'for i in range(3**9)if(t:=g(i)[:-1]).count('x')-t.count('o')in(0,1)]).index(s))[2:]):0&gt;13}&quot;
+g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
+</code></pre>
+<p><a href="https://tio.run/##TY/RbsIwDEXf9xUW0mS7lEHIy7DafcH@oOtDGaREGkkVMikT4tu7AGXa8cu90pWvPfzEg3f6dQijqT/Gr@643XVwEjM7U5R6ax3Ru9SNwXOUanNB4wNYsA5C5/o96aLYsDXXbE@WG1moll8@/beLhAl5ER/GI@dlq1JxDli32yc6MTdraVlWb0pfZk99PfUnQYUFpUqxDwjJY5OedTvvKS2Xmse/I3LHFZ/BEpOf5p@Gu4YbWQNM7qYnkGUINl9p8g88/gI" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>-11 bytes thanks to Malo</p>
+<p>Basically brute force, converts base 3 to <code>' xo'</code> strings and then enumerates cases where there are <code>0</code> or <code>1</code> more x's than o's. Also accounts for extra whitespace/zeros at the end of each string.</p>
+<p>Ungolfed:</p>
+
+<pre class="lang-python prettyprint-override"><code>def f(s):
+    L=[]
+    g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
+    for i in range(3**9):
+        t1=g(i)[:-1]
+        if t1.count('x')-t1.count('o') in (0,1):L.append(t1+' '*(9-len(t1)))
+    t1=bin(L.index(s))[2:]
+    return '0'*(13-len(t1))+t1
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 199 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;i++){for(wmemset(b,32,p=9),x=o=0,j=i;j;j/=3)b[--p]=&quot;x o&quot;[d=j%3],x+=d&lt;1,o+=d&gt;1;if(!memcmp(a,b,36))for(wmemset(a,48,p=13);c;c/=2)a[--p]=48+c%2;c+=x==o|x==o+1;}}
 </code></pre>
@@ -73,7 +93,7 @@ int f(char* a)
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 177 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 177 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>e s t=take t.g.d where d a=divMod a$l s;g(a,b)=s!!b:g(d a)
 f=filter
@@ -95,14 +115,14 @@ a s=e&quot;01&quot;13.l.f(\u-&gt;o((o(\c-&gt;l.f(==c)$u)(-)'x''o')==)(||)1 0&amp
 </li>
 </ol>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 121 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 121 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:bin(g('').index(s)+8888)[3:];g=lambda p,c=0:[p]*(c%8&lt;2)if p[8:]else sum([g(p+' xo'[n%5],c+n)for n in[0,7,1]],[])
 </code></pre>
 <p><a href="https://tio.run/##ZY/RbsMgDEXf@xV@mcAti9pV07qsfAlDVUpIykQABSJlX5@RdEonjRfjK9v3nvCdbt4dp4Z/TrbqrnUFsbwaR1tKCBbG1XqkEXen/FAcS/nR8t@5wBTflyLILVVPp/MLmgaCOJVS26ghDh0VLQ07AqMnwj29SqZ2DhvfgwPjxJ69sYOUTEicQm9cog0lIwD4cQRPEDemC75PYJLuk/c2MlDeWq2S8S43zeDUom9avv4L2w8XVambpkhb3FTWXowLQwIOgpDiy2c2s6QwOcXjeBF6Xw8q0a1YEsvt@wxkCuWHnI2MBJ/XJsdbCHL@xcEP6W5hTUy0qwJtGKzWGeUOaLWjUSf6WEFkMKv/Z7OyzBvk/HCEytUwrxo887mS/YEgrBh/L04/" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Python port to my JS solution.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 22 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 22 bytes</h1>
 <p>As suggested by emanresu A, a port of <a href="https://codegolf.stackexchange.com/a/275707/64121">their Vyxal answer</a> ends up a lot shorter:</p>
 <pre><code>1_2\&quot;o x&quot;[+3\&lt;+/!9#3]?
 </code></pre>
@@ -113,26 +133,6 @@ a s=e&quot;01&quot;13.l.f(\u-&gt;o((o(\c-&gt;l.f(==c)$u)(-)'x''o')==)(||)1 0&amp
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs9IwNFY20oxRqlDIV4rWNo5Rq9M1UtTWN9RVtFQ2jrXn4koDSiko5FeAFIA4FRX5+flAESUAsUoO3A==" rel="nofollow noreferrer">Try it online!</a></p>
 <p><code>+3\&amp;~-2!+/1-!9#3</code> generates all valid boards using 0 for <code>x</code>, 1 for spaces and 2 for <code>o</code>. <code>&quot;x o&quot;[...]</code> converts the boards to strings, <code>?</code> finds the argument in the list of strings and <code>(13#2)\</code> converts the integer to 13 binary digits.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>177</s> 173 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda s:f&quot;{(t:=bin((L:=[t+' '*(9-len(t))for i in range(3**9)if(t:=g(i)[:-1]).count('x')-t.count('o')in(0,1)]).index(s))[2:]):0&gt;13}&quot;
-g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
-</code></pre>
-<p><a href="https://tio.run/##TY9BjsIwDEX3cwoLCdkuFAjZQEQ5wdygdFGGpkSCpApBCkKcvROgjOZ58y3Z/t/dLRydlavO97rY9af6vD/UcFF6dKegir2xRN@qKMMEATNa56fGUmDWzoMBY8HXtm1IZtmajX6utGS4VLmoePbjrjYQRuQ8fBqHnG4upoLTgLGHJtKFuVyqitViK@Rj9NUWQ4yoUCTTuBHsPEJ0WMaxrCYtxflccv8XInk8cQmcYnRD/dPw1vAiaYChe@kBZNV5k1Lq9AP3vw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<p>-4 bytes thanks to Malo</p>
-<p>Basically brute force, converts base 3 to <code>' xo'</code> strings and then enumerates cases where there are <code>0</code> or <code>1</code> more x's than o's. Also accounts for extra whitespace/zeros at the end of each string.</p>
-<p>Ungolfed:</p>
-
-<pre class="lang-python prettyprint-override"><code>def f(s):
-    L=[]
-    g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
-    for i in range(3**9):
-        t1=g(i)[:-1]
-        if t1.count('x')-t1.count('o') in (0,1):L.append(t1+' '*(9-len(t1)))
-    t1=bin(L.index(s))[2:]
-    return '0'*(13-len(t1))+t1
-</code></pre>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> -n, 97 bytes</h1>
 
